# simple_system_design

./: pyproject.toml
